--- a/src/utility.css
+++ b/src/utility.css
@@ -26,7 +26,7 @@ ul { list-style: none;}
 /*----Containers*/
 .container { max-width: 1100px; margin: 0 auto; overflow: auto; padding: 0 40px;}
 .container-big { max-width: 1050px; margin: 0 auto; overflow: auto; padding: 0 40px;}
-.container-sm { max-width: 1300px; margin: 0 auto; overflow: auto; padding: 0 20px;}
+.container-sm { max-width: 1300px; margin: 0 auto; overflow: auto; padding: 0 20px; overflow-y: hidden; }
 .container-mid { max-width: 1200px; margin: 0 auto; overflow: auto; padding: 0 40px; overflow-y: hidden; }
 /*----END Containers*/
 /*----WIDTHS*/
