files are ready

--- a/src/pages/ChallengeOne.css
+++ b/src/pages/ChallengeOne.css
@@ -16,7 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
+    padding: 3rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
@@ -39,11 +39,23 @@ color: #1da69f !important;
     cursor: pointer;
 }
 
+.bg_solution {
+    border-radius: 25px;
+}
+
 .headline_card {
     color: #000;
     font-size: 48px;
     font-weight: 500;
 }
+
+.headline_card_mid {
+    color: #000;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+
 
 .headline_subcard {
     color: #000;
