--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -37,6 +37,13 @@
     font-weight: 200;
 }
 
+.close_para {
+    color: #000;
+    font-size: 12px;
+    line-height: 22px;
+    font-weight: 100;
+}
+
 .club_btn {
     background: #1da69f;
     padding: 0.5rem 2.5rem;
